== Version 4.2.1-SNAPSHOT
* When overriding default GRPC security configuration, `@Secured` annotation is enabled by default.

== Version 4.2.0
* gRPC version upgraded to 1.33.0
* Fixed the issue with default method-level `@Secured` annotation (see #159)

== Version 4.1.0
* gRPC version upgraded to 1.32.2
* Fixed the issue with  obtaining `Authentication` details in secured method implementation.
* Fixed the issue with providing client-side user credentials.

== Version 4.0.0
* Spring Security framework integration
* gRPC version upgraded to 1.32.1
* Spring Boot 2.3.3

[IMPORTANT]
Please use `4.1.0` version, `4.0.0` has issue with obtaining Authentication details in secured object implementation.

== Version 3.5.7
* gRPC version upgraded to 1.31.1

== Version 3.5.6
* gRPC version upgraded to 1.30.2

== Version 3.5.5
* gRPC version upgraded to 1.30.0
* Consul health check support for GRPC service (credits to https://github.com/evk1986[@evk1986])

== Version 3.5.4
* gRPC version upgraded to 1.29.0

== Version 3.5.3
* gRPC version upgraded to 1.28.0

== Version 3.5.2
* gRPC version upgraded to 1.27.2
* Gradle 5.6.3

== Version 3.5.1
* Graceful shutdown timeout setting
* Fixed potential race condition issue when defining running port.


== Version 3.5.0
* gRPC version upgraded to 1.25.0

== Version 3.4.3
* Spring boot 1.2.x compatibility

== Version 3.4.2
* gRPC version upgraded to 1.24.0

== Version 3.4.1
* gRPC version upgraded to 1.23.0

== Version 3.4.0
* gRPC version upgraded to 1.22.1
* TLS support

== Version 3.3.0
* gRPC version upgraded to 1.21.0
* Consul auto-registration support

== Version 3.2.2
* gRPC version upgraded to 1.20.0

== Version 3.2.1
* Closes #103 and #99
Property `local.grpc.port` was removed , please use `@LocalRunningGrpcPort` annotation on `int` field to get running port.

== Version 3.2.0
* gRPC version upgraded to 1.19.0

== Version 3.1.0
* gRPC version upgraded to 1.18.0

== Version 3.0.2
* gRPC version upgraded to 1.17.1
